--- a/client/src/screens/HomeScreen.css
+++ b/client/src/screens/HomeScreen.css
@@ -122,3 +122,12 @@ select,button {
   background-color: #282c34;
   color: #fff;
 }
+
+.sidebar{
+  position: fixed;
+  right: 50px;
+  height: 10%;
+  width: 10%;
+  background-color: #282c34;
+  color: #fff;
+}
