--- a/client/src/screens/HomeScreen.css
+++ b/client/src/screens/HomeScreen.css
@@ -1,133 +1,200 @@
-body{
-  font-family: apple-system, BlinkMacSystemFont, sans-serif;
-  font-weight: normal;
-  font-size: 100%;
-  background-color: #282c34;
-}
-.section{
-  padding: 1em;
+body {
+    font-family: apple-system, BlinkMacSystemFont, sans-serif;
+    font-weight: normal;
+    font-size: 100%;
+    background-color: #282c34;
 }
 
-.data-card{
-  display: inline-block;
-  border-radius: .5em;
-  box-shadow: 0 1px 2.5em rgba(0,0,0,.1);
-  padding: 1em 1em 1em 1em;
-  background-color: rgb(15, 15, 15, .5);
-  width: 120px;
-  transition: .15s ease-out all;
-  border: 1px solid transparent;
-  cursor: default;
-  position: relative;
-  color: #fff;
-  height: 550px;
-  width: 500px;
-  padding: 1rem;
-}
-.data-card__val{
-  font-weight: 200;
-  font-size: 30px;
-  margin-bottom: 10px;
+.section {
+    padding: 1em;
 }
 
-.data-card__val2{
-  font-weight: 200;
-  font-size: 25px;
-  margin-bottom: 10px;
+.data-card {
+    display: inline-block;
+    border-radius: .5em;
+    box-shadow: 0 1px 2.5em rgba(0, 0, 0, .1);
+    padding: 1em 1em 1em 1em;
+    background-color: rgb(15, 15, 15, .5);
+    width: 120px;
+    transition: .15s ease-out all;
+    border: 1px solid transparent;
+    cursor: default;
+    position: relative;
+    color: #fff;
+    height: 550px;
+    width: 500px;
+    padding: 1rem;
 }
 
-.data-card__label{
-  margin-bottom: .75em;
-  font-size: 19px;
-  font-weight: 500;
-  color: #777E86;
+.data-card__val {
+    font-weight: 200;
+    font-size: 30px;
+    margin-bottom: 10px;
 }
 
-.data-card__color{
-  width: 20px;
-  height: 5px;
-  background-color: #fcfcfc;
-  border-radius: 1em;
+.data-card__val2 {
+    font-weight: 200;
+    font-size: 25px;
+    margin-bottom: 10px;
 }
 
-
-.Home{
-  background-color: #282c34;
-  display: flex;
-  flex-direction: column;
+.data-card__label {
+    margin-bottom: .75em;
+    font-size: 19px;
+    font-weight: 500;
+    color: #777E86;
 }
 
-
-.display{
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  align-items: center;
+.data-card__color {
+    width: 20px;
+    height: 5px;
+    background-color: #fcfcfc;
+    border-radius: 1em;
 }
 
-.chart{
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  align-items: center;
-  height: 500px;
-  width: 500px;
-  color: #fff;
+.Home {
+    background-color: #282c34;
+    display: flex;
+    flex-direction: column;
 }
 
-.Card{
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  background: rgb(26, 26, 26);
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  align-items: center;
-  height: 40%;
-  width: 40%;
-  border-radius: 5%;
-  margin: 10px;
-  padding: 10px;
-  color: white;
+.display {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
 }
 
-
-select,button {
-  font-size: 1rem;
-  padding: 1rem;
-  margin: 1rem;
-  border-radius: 10px;
+.chart {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    height: 550px;
+    width: 500px;
+    color: #fff;
+    padding: 1rem;
 }
 
-.btn{
-  padding: 0.5rem;
-  margin: 1rem;
-  border-radius: 10px;
+.Card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    background: rgb(26, 26, 26);
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    height: 40%;
+    width: 40%;
+    border-radius: 5%;
+    margin: 10px;
+    padding: 10px;
+    color: white;
 }
 
-.btn:hover{
-  background-color: #282c34;
-  color: #fff;
+select,
+button {
+    font-size: 1rem;
+    padding: 1rem;
+    margin: 1rem;
+    border-radius: 10px;
 }
 
-.btn-us{
-  background-color: #fcfcfc;
-  color: #282c34;
-  width: 400px;
-  align-self: center;
-  border: 0.5px solid #ffffff;
+.btn {
+    padding: 0.5rem;
+    margin: 1rem;
+    border-radius: 10px;
 }
 
-.btn-us:hover{
-  background-color: #282c34;
-  color: #fff;
+.btn:hover {
+    background-color: #282c34;
+    color: #fff;
 }
 
-.sidebar{
-  position: fixed;
-  right: 50px;
-  height: 10%;
-  width: 10%;
-  background-color: #282c34;
-  color: #fff;
+.btn-us {
+    background-color: #fcfcfc;
+    color: #282c34;
+    width: 400px;
+    align-self: center;
+    border: 0.5px solid #ffffff;
+}
+
+.btn-us:hover {
+    background-color: #282c34;
+    color: #fff;
+}
+
+.sidebar {
+    position: fixed;
+    right: 50px;
+    height: 10%;
+    width: 10%;
+    background-color: #282c34;
+    color: #fff;
+}
+
+div.widget {
+    display: flex;
+    width: 400px;
+    height: 500px;
+    margin: 150px auto;
+    background-color: rgb(26, 26, 26);
+    border-radius: 9px;
+    padding: 25px;
+    padding-right: 30px;
+    box-shadow: 0px 31px 35px -26px #080c21;
+}
+
+div.date {
+    font-size: 14px;
+    font-weight: bold;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+div.city {
+    font-size: 21px;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding-top: 5px;
+    color: rgba(0, 0, 0, 0.7);
+}
+
+div.temp {
+    font-size: 81px;
+    color: rgba(0, 0, 0, 0.9);
+    font-weight: 100;
+}
+
+div.panel {
+    display: inline-block;
+}
+
+div.right-panel {
+    margin-top: 35px;
+    padding-left: 10px;
+}
+
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #464646; /* Blue */
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  animation: spin 2s linear infinite;
+  position: absolute;
+  top: 200px;
+  left: 35%;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.title{
+    font-size: 3.5rem;
+    font-weight: bold;
+    color: #fff;
+    text-align: center;
+    margin: 0px 10px 0px 0px;
 }
